Closed
Bug 138676
Opened 23 years ago
Closed 23 years ago
tinderbox checkin popups show up empty
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: john, Assigned: jst)
References
()
Details
Attachments
(1 file)
|
1.53 KB,
patch
|
john
:
review+
hjtoi-bugzilla
:
superreview+
|
Details | Diff | Splinter Review |
STEPS:
1. Load tinderbox (http://tinderbox.mozilla.org/showbuilds.cgi?tree=SeaMonkey)
2. Click on a name for a checkin.
EXPECTED RESULTS: A little iframe shows up with links to the person's checkins
ACTUAL RESULTS: A border shows up, but no iframe.
| Reporter | ||
Comment 1•23 years ago
|
||
JST is fixing bugs before they are bugs :)
| Reporter | ||
Comment 2•23 years ago
|
||
Comment on attachment 80130 [details] [diff] [review]
Patch from JST
r=jkeiser
Attachment #80130 -
Flags: review+
Comment on attachment 80130 [details] [diff] [review]
Patch from JST
sr=heikki
Attachment #80130 -
Flags: superreview+
| Reporter | ||
Comment 4•23 years ago
|
||
Fix checked in (yesterday).
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 5•23 years ago
|
||
Setting as blocker of bug 52334 so we don't forget these patches.
Blocks: 52334
Comment 6•23 years ago
|
||
Verified on Branch build: 2002042606. The Iframe with the links are showing up.
Status: RESOLVED → VERIFIED
Keywords: verified1.0.0
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•