Fix Tinderbox popups not appearing (bug 138676), jst's patch, r=jkeiser, sr=heikki